--- a/src/Makefile.defs
+++ b/src/Makefile.defs
@@ -3,7 +3,7 @@
 
 # directory to install to. Depending on your distribution, you might
 # want to change this to /usr/local
-prefix = /usr
+prefix = /usr/local
 CC      = gcc
 
 PAL_VERSION = 0.4.2
